/*
 * Netty-Wolf
 * Copyright (C) 2020  Colin Chow
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

plugins {
    id 'java-library'
}
sourceSets{
    //noinspection GroovyAssignabilityCheck
    main {
        java {
            srcDirs = ['src']
        }
        resources{
            srcDirs = ['resources']
        }
    }
}
dependencies{
    compile project(':Common')
    implementation group: 'io.netty', name: 'netty-all', version: '4.1.50.Final'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
}
java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}
version = '0.0.1'